# dlib

./: .gitignore
dlib/: CMakeLists.txt
dlib/cmake_utils/: set_compiler_specific_options.cmake  use_cpp_11.cmake
examples/: CMakeLists.txt  webcam_face_pose_ex.cpp
